Cleanup styles, changed product image in slider to object-fit contain to avoid cutting off edges

--- a/components/product/ProductView/ProductView.module.css
+++ b/components/product/ProductView/ProductView.module.css
@@ -26,11 +26,11 @@
 }
 
 .sliderContainer .img {
-  @apply w-full h-auto max-h-full object-cover;
+  @apply w-full h-auto max-h-full object-contain;
 }
 
 .button {
-  width: 100%;
+  @apply w-full;
 }
 
 .wishlistButton {
